Fixed image stretch and background positions

--- a/tailwind.css
+++ b/tailwind.css
@@ -616,6 +616,10 @@ video {
   display: flex;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
 .h-\[1px\] {
   height: 1px;
 }
@@ -626,6 +630,10 @@ video {
 
 .h-80 {
   height: 20rem;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .w-full {
@@ -694,6 +702,24 @@ video {
   background-size: cover;
 }
 
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .px-\[5vw\] {
   padding-left: 5vw;
   padding-right: 5vw;
@@ -742,6 +768,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .pb-32 {
@@ -812,6 +843,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-semibold {
